[gd_scene load_steps=10 format=3 uid="uid://cvi7tytfaq5q5"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_th7mq"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="2_3s12t"]
[ext_resource type="Texture2D" uid="uid://c3smbi54gvxdp" path="res://sprites/suit_spades.png" id="2_u5bj7"]
[ext_resource type="FontFile" uid="uid://cif5ntlygwulu" path="res://fonts/Nexa-Heavy.ttf" id="4_6nwrj"]
[ext_resource type="StyleBox" uid="uid://cy0g2obixeg1v" path="res://styles/button_focus.tres" id="5_54syr"]
[ext_resource type="StyleBox" uid="uid://bs0cotqkwihub" path="res://styles/button_hover.tres" id="6_05gpn"]
[ext_resource type="StyleBox" uid="uid://btbm728b6gv8y" path="res://styles/button_normal.tres" id="7_aqak3"]
[ext_resource type="FontFile" uid="uid://cwgdw0dwxqurg" path="res://fonts/Nexa-ExtraLight.ttf" id="8_rled6"]

[sub_resource type="Theme" id="Theme_f0hqk"]
Button/styles/focus = ExtResource("5_54syr")
Button/styles/hover = ExtResource("6_05gpn")
Button/styles/normal = ExtResource("7_aqak3")

[node name="Game" type="Node2D"]
script = ExtResource("1_th7mq")
grid_size = Vector2(11, 6)
start_position = Vector2(100, 100)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(640, 360)

[node name="GameOver" type="CanvasLayer" parent="."]
script = ExtResource("2_3s12t")

[node name="TurnMark" type="TextureRect" parent="GameOver"]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -50.0
offset_right = 31.0
offset_bottom = 78.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("2_u5bj7")

[node name="GameOverScreen" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 720.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.329412)

[node name="GameOverText" type="Label" parent="GameOver/GameOverScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 137.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_6nwrj")
theme_override_font_sizes/font_size = 40
text = "Ha ganado el jugador \\_/"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="GameOver/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -21.0
offset_right = 62.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_f0hqk")
theme_override_fonts/font = ExtResource("8_rled6")
theme_override_font_sizes/font_size = 30
text = "menu_revenge"

[node name="MainMenuButton" type="Button" parent="GameOver/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = 53.0
offset_right = 114.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_f0hqk")
theme_override_fonts/font = ExtResource("8_rled6")
theme_override_font_sizes/font_size = 30
text = "menu_mm"

[connection signal="pressed" from="GameOver/GameOverScreen/RetryButton" to="GameOver" method="_on_retry_button_pressed"]
